@@ -26,7 +26,7 @@ public abstract class AbstractUser {
      * @param password user's password
      * @param isBanned whether or not user is banned
      */
-    public AbstractUser(String username, boolean isAdmin, String email, String password, boolean isBanned) {
+    AbstractUser(String username, boolean isAdmin, String email, String password, boolean isBanned) {
         this.username = username;
         this.isAdmin = isAdmin;
         this.email = email;
@@ -51,17 +51,17 @@ public abstract class AbstractUser {
         assert line != null;
         Log.d("Abstract User", line);
         String[] tokens = line.split("\t");
-        assert tokens.length == 5;
+        //assert tokens.length == 5;
 
         if (tokens[2].equals("true")) {
             return new Admin(tokens[0], tokens[3], tokens[1]);
         }
-        return new User(tokens[0], tokens[3], tokens[1], new Boolean(tokens[4]));
+        return new User(tokens[0], tokens[3], tokens[1], Boolean.valueOf(tokens[4]));
     }
 
     /**
      * Method that is used to write user data to a file with a given order of the instance variables
-     * @param writer printwriter used to write data to
+     * @param writer print writer used to write data to
      */
     public void saveAsText(PrintWriter writer) {
         //Log.d("AbstractUser", "saving userdata: " + username + "\t" + password + "\t" + String.valueOf(isAdmin) + "\t" + email);
@@ -144,7 +144,7 @@ public abstract class AbstractUser {
         return isBanned;
     }
 
-    protected void setIsBanned(boolean isBanned) {
+    void setIsBanned(boolean isBanned) {
         this.isBanned = isBanned;
     }
 }
